...
    >
      <Tabs.Screen
        name="home"
        listeners={scrollOnRetap('home')}
        options={{
          title: 'Home',
          tabBarAccessibilityLabel: 'Home tab',
          tabBarIcon: ({ focused }) => (
            <TabIcon icon={HomeIcon} focused={focused} palette={palette} />
          ),
        }}
      />
      <Tabs.Screen
...
